--- a/gitops/env/stage2/configs/keycloak/keycloak-post-gerrit/Dockerfile
+++ b/gitops/env/stage2/configs/keycloak/keycloak-post-gerrit/Dockerfile
@@ -22,4 +22,4 @@ ADD secret.json ./
 ADD secure.config ./
 RUN chmod +x configure.sh
 USER node
-CMD ["/bin/sh", "-c", "/home/node/configure.sh"]
+CMD ["/bin/bash", "-c", "/home/node/configure.sh"]
