--- a/gitops/env/stage2/configs/keycloak/keycloak-post-jenkins/Dockerfile
+++ b/gitops/env/stage2/configs/keycloak/keycloak-post-jenkins/Dockerfile
@@ -21,4 +21,4 @@ ADD configure.sh ./
 ADD secret.json ./
 RUN chmod +x configure.sh
 USER node
-CMD ["/bin/sh", "-c", "/home/node/configure.sh"]
+CMD ["/bin/bash", "-c", "/home/node/configure.sh"]
