--- a/gitops/env/stage2/configs/mtk-connect/mtk-connect-post/Dockerfile
+++ b/gitops/env/stage2/configs/mtk-connect/mtk-connect-post/Dockerfile
@@ -19,4 +19,4 @@ ADD secret-mtk-connect.json /root
 RUN apt update -y && apt install vim curl skopeo jq -y
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
 RUN mv /kubectl /usr/local/bin && chmod +x /usr/local/bin/kubectl && chmod +x /root/configure.sh
-CMD ["/bin/sh", "-c", "/root/configure.sh"]
+CMD ["/bin/bash", "-c", "/root/configure.sh"]
