--- a/gitops/env/stage2/templates/mtk-connect-post.yaml
+++ b/gitops/env/stage2/templates/mtk-connect-post.yaml
@@ -102,6 +102,7 @@ metadata:
 spec:
   schedule: "0 0 * * *"
   startingDeadlineSeconds: 300
+  ttlSecondsAfterFinished: 120
   jobTemplate:
     spec:
       template:
