--- a/gitops/env/stage2/apps/mtk-connect/values.yaml
+++ b/gitops/env/stage2/apps/mtk-connect/values.yaml
@@ -15,12 +15,13 @@
 config:
   gitops:
     mtkconnect:
-      router: harbor.scpmtk.com/mtk-connect/mtk-connect-router:v2.2.6
-      authenticator: harbor.scpmtk.com/mtk-connect/mtk-connect-authenticator:v3.5.1
-      wamprouter: harbor.scpmtk.com/mtk-connect/mtk-connect-wamprouter:v3.0.26
-      devices: harbor.scpmtk.com/mtk-connect/mtk-connect-devices:v7.7.0
-      portal: harbor.scpmtk.com/mtk-connect/mtk-connect-portal:v5.7.0
-      docs: harbor.scpmtk.com/mtk-connect/mtk-connect-docs:v2.0.11
+      router: harbor.scpmtk.com/mtk-connect/mtk-connect-router:v2.2.7
+      authenticator: harbor.scpmtk.com/mtk-connect/mtk-connect-authenticator:v3.5.2
+      wamprouter: harbor.scpmtk.com/mtk-connect/mtk-connect-wamprouter:v3.0.27
+      devices: harbor.scpmtk.com/mtk-connect/mtk-connect-devices:v7.7.0-c5a1faa
+      portal: harbor.scpmtk.com/mtk-connect/mtk-connect-portal:v5.7.0-6470d098
+      installers: harbor.scpmtk.com/mtk-connect/mtk-connect-installers:main-1ba98ae
+      docs: harbor.scpmtk.com/mtk-connect/mtk-connect-docs:v2.0.11-599594d
 spec:
   destination:
     server: https://kubernetes.default.svc
